# ChangeLog for dev-util/global
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/global/ChangeLog,v 1.128 2014/08/10 21:27:32 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> global-6.2.10.ebuild,
  global-6.2.11.ebuild, global-6.2.12.ebuild, global-6.3.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  24 Jun 2014; Agostino Sarubbo <ago@gentoo.org> global-6.2.11.ebuild:
  Stable for x86, wrt bug #512456

*global-6.3 (10 Jun 2014)
*global-6.2.12 (10 Jun 2014)

  10 Jun 2014; Mike Gilbert <floppym@gentoo.org> +global-6.2.12.ebuild,
  +global-6.3.ebuild:
  Version bumps (bug #512832). Ebuilds by Arfrever.

  08 Jun 2014; Agostino Sarubbo <ago@gentoo.org> global-6.2.11.ebuild:
  Stable for ppc, wrt bug #512456

  08 Jun 2014; Chema Alonso <nimiux@gentoo.org> global-6.2.11.ebuild:
  Stable for amd64 wrt bug #512456

*global-6.2.11 (15 Mar 2014)

  15 Mar 2014; Mike Gilbert <floppym@gentoo.org> +global-6.2.11.ebuild:
  Version bump. Ebuild by Arfrever.

  11 Mar 2014; Mike Gilbert <floppym@gentoo.org> -global-6.2.8.ebuild,
  -global-6.2.9.ebuild:
  Remove per Arfrever.

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> global-6.2.10.ebuild:
  Stable for ppc, wrt bug #502806

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> global-6.2.10.ebuild:
  Stable for x86, wrt bug #502806

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> global-6.2.10.ebuild:
  amd64 stable, bug #502806

*global-6.2.10 (18 Jan 2014)

  18 Jan 2014; Mike Gilbert <floppym@gentoo.org> +global-6.2.10.ebuild:
  Version bump. Ebuild by Arfrever.

  14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> global-6.2.9.ebuild:
  Stable for ppc, wrt bug #495670

  14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> global-6.2.9.ebuild:
  Stable for x86, wrt bug #495670

  12 Jan 2014; Pacho Ramos <pacho@gentoo.org> global-6.2.9.ebuild:
  amd64 stable, bug #495670
