@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare
+DEPEND=doc? ( app-text/texi2html sys-apps/texinfo ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=GNU Global is a tag system to find the locations of a specified object in various sources
+EAPI=5
+HOMEPAGE=http://www.gnu.org/software/global/global.html
+IUSE=doc emacs vim
+KEYWORDS=~amd64 ~ppc ~x86 ~x86-fbsd
+LICENSE=GPL-3
+RDEPEND=sys-devel/libtool sys-libs/ncurses emacs? ( virtual/emacs ) vim? ( || ( app-editors/vim app-editors/gvim ) )
+SLOT=0
+SRC_URI=mirror://gnu/global/global-6.3.1.tar.gz
+_eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	elisp-common	1aa23b3de5dae55456fa2071428eb5bf	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=1ac6aaf5f4633554602283261b582458
