@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install prepare test
+DEPEND=dev-libs/apr:1= dev-libs/apr-util:1= dev-libs/openssl:0= sys-libs/zlib:0= kerberos? ( virtual/krb5 ) >=dev-util/scons-2.3.0 dev-util/scons
+DESCRIPTION=HTTP client library
+EAPI=5
+HOMEPAGE=http://code.google.com/p/serf/
+IUSE=kerberos
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos
+LICENSE=Apache-2.0
+RDEPEND=dev-libs/apr:1= dev-libs/apr-util:1= dev-libs/openssl:0= sys-libs/zlib:0= kerberos? ( virtual/krb5 )
+SLOT=1
+SRC_URI=http://serf.googlecode.com/svn/src_releases/serf-1.3.7.tar.bz2
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	scons-utils	988e24b9e2e4642189b4e97c03e5ae71	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=f2e81a4e064e8179e685ad80a2b304d4
