@@ -9,18 +9,20 @@ DIST serf-1.3.3.tar.bz2 140213 SHA256 02eae04176296347be3c32b0da8d8610064f4a9f40
 DIST serf-1.3.4.tar.bz2 140680 SHA256 db5dcf68be722156de67518231da17c451f6c5d16523ff03e4e37f28d06ee0cb SHA512 1e88fff9ba7a43587abcb5a6ab47b0b016397726b873a4298cdb6e820736e95090ede2779b03ee9eb1feb775082d22cbb88ddb379acc05a4b34f4f2066aafc77 WHIRLPOOL 4e3c2a72f77700cde39cd0d704223a7caac1ae9bf2d5ed88ff1feb8f102398fd9241018ed8aa12b2d29a99da5d300b79b05b32150a9a8b665e3f383d926cce1c
 DIST serf-1.3.5.tar.bz2 140554 SHA256 d311ce81a58301f47e652e54551999033880decefae0deea58ba5415776b1fc3 SHA512 cfb910253fc673a8fba98a7dc3dc0e20fdd4e0b2cb3261a7f50bb3df6bd507f41a89fd0fb1d0d082ac4e8849f20a873e7deced5647163096d5c464bcd27070c2 WHIRLPOOL 44f85399eb4edaa57f268f04a497863d0443877ff64891ccec22ee63a0a4987d89cce725bf977a05b46a4af29aa8e5ada7356676bd28d067b43af254453f9bd4
 DIST serf-1.3.6.tar.bz2 140671 SHA256 ca637beb0399797d4fc7ffa85e801733cd9c876997fac4a4fd12e9afe86563f2 SHA512 e27751c385b447d66beebebd7113e336a7ef46de967063ca5267cd704609920ed0a7279f71f5cb7249d01755ef29da6d566e24fdbbea833873b156d4d30e0727 WHIRLPOOL 54f572ff55f03c64dcc3208689f8d715f30d30a4dfdec4489da49e26e15842fda3cc637fd22fbe06336d7d4cc64f927ce5f0fedf7420ca9bb97e2d7269304d3f
+DIST serf-1.3.7.tar.bz2 141378 SHA256 ecccb74e665e6ea7539271e126a21d0f7eeddfeaa8ce090adb3aec6682f9f0ae SHA512 5a855cea27499087d701a389efa084181a607865ab11c4e6ae95dbc2b6114aaac026eae9e54acaeaef2c89db5e3c90b6d48a806026dbb1e8c2bd660e159871a0 WHIRLPOOL f31f33577fe1c979fad864b6ae713e5f4d7b10d1599d5e35eb234716b62064c5fcab99a8a6ab5f243c9b03ddac35f0ada49e0609dcdc903da61d2c708526b17a
 EBUILD serf-1.2.1.ebuild 1056 SHA256 dc1a727669593fdedaed3eb2991eccbfbf6c2ca4417c9043aaf62de6a39585db SHA512 5dcf390bb916121155d72423a9a935de953cb344a21251b697b3b3c81c5e4e047d48745b3da4767d9d64000694caf479ea042771c2f15c21a159c559678a21c8 WHIRLPOOL b069ea4366c364a75a8d963b440e6bf4dd2c6055757d5256f659c00d6605c386d9aa7c5e4f12fe492a54513bee7de9c535dc79773177c506cd961b0f0772784b
 EBUILD serf-1.3.2.ebuild 1424 SHA256 9a91d4592d3b6e8593f734c0a73c92137646f18601f6d3ba8058931c77c568e0 SHA512 747dbefc0b4735720817e8c5227b92f69169bd81c3fda6851f660fa8e4346f20ad338e850757933f4c07349f99c6df42d56134b00d09d0c2e800e27e9b867d4e WHIRLPOOL 965c400f97585b64bea34460ea6372f761e50ab400f2de69722aea568961f009e0c4e49e667744722f4edb53afa1f4db0f5794e77d96cf51b860f41c8ea4614b
 EBUILD serf-1.3.3.ebuild 1436 SHA256 12d9f3f8002649760f2102a5eb79123ba32da21e5f0d9ba43597f24193cdf7f7 SHA512 e86a00d1eb7aac667e0335c06f84711107ba155f608e0ab877af5a8de5d91ebb39014bdbedcb5e3f99969b6981bb675f0c5f2c1036699f7615ee2e127b433cd5 WHIRLPOOL 8ceaff45c9baf4957bc14d3ccb4f64a5757bec88838a858dadfb9f413bf33f906126125ebd80d3813013bb29317541ab00e7be7273b41ee470f1aac5026123d1
 EBUILD serf-1.3.4.ebuild 1467 SHA256 5d3b7d1802ad7d881cc7bcf52eadc83afc01608e250f7b807b66f8b7db3d7b69 SHA512 13885bd25273c68f99662beb8eb016d91f952fa9e207b9bbb893a542834334174a17855a62db06300c43f9ded86db5b15a37b0037096a01737ea9ad641c6fd82 WHIRLPOOL 51842c7f2755d142176a10423e82dae1c5a733269d282f7d263a22ce57beff41b54cba5d62668d21f2116568c4792c90e2a1b0500e2712f016b3f02e40b27e7b
 EBUILD serf-1.3.5.ebuild 1481 SHA256 51b9c456be36d770f8ec9816e50c0a4793860907b34b9cbcc16d910c24be5f2c SHA512 14e1c39a1ce41d5b6ca7c0ee7718825e0d54420528f7059a3fc2eacdb6addef9d3d2fa21d18ec24fa5b7b04717c664a6ececeaeec60f633016f1955f306b4947 WHIRLPOOL 0020eb5853002bc8d022dc04ec3f04bf06434cb419343ec611046abb10166e6ce953dff3b2a6063c3566321d0b8980bb16b8ecbb141337a5f008e99feb02980f
 EBUILD serf-1.3.6.ebuild 1487 SHA256 1910033ab41d06e6979fd0696f37e4c1e1d1c7e7ecf321415156f3439ee551d5 SHA512 a214e070a003665b1e1fd328715be2e73b25e76928bcba7cd43fc6c2626d5e7f4df1998e2cf3b6bd3919c1d99cb7e3bbc4eaba707b83bcc723c8737d19c6184d WHIRLPOOL 1f7675cc363a7567bc2b7361ea169b19f4e1cf4ac2504df95592db029d86e7c2e3ad1508d823ed9cf7087d6699597d8e65d9dc3255942e421e362ad2268c1151
-MISC ChangeLog 15352 SHA256 f10ba1eee1bc0e2eeaeabde307e7fd2b6f3ae5bc832e833d7f67c35e55c0af28 SHA512 220027fa8546ebd2b0b1a0110dadd7b32fb05fd7e15172bfe7df37b8bd2d08dd9c3fcafe9ecfbd643f85498baa183fe028e4d2a7b8d770347d33fd451873f2da WHIRLPOOL fcae3b6ffe971adf01f8e35e3e965312bc3e5943ec4142e2b1f15bc4dfe1a1c59cc4c0cc63d9b0f8dcab215d99f36a06f2a6d6d355f0a7fe0394db6a2bd6c344
+EBUILD serf-1.3.7.ebuild 1492 SHA256 8937013d24cbd139d6029ccb15cc041d1b9f49ca1ef0c7023cdf0066aebe3446 SHA512 afe08c0325892a3b4f993c39d2d1bf7bc2482de2d21f9c48fab7b41ee0fd8173f6519eaf8aee68b918b06060f8b2800a5c6f568bc4fc8655d0427cf77195ac04 WHIRLPOOL 37806e6a72bdfa265ee29b9461d092113962830229be7ffeafc4f621eb5aef764c53213d8653338ced4eed49ba7aa6606969dfb5cacdc963e65f1d37569043c6
+MISC ChangeLog 15489 SHA256 b6da432a9ff876ea7f9d2b218c30aa9a38e73c57c9b8a1e5250906a59f1671c6 SHA512 a5e15f0b2d0aa6c64c7c829026b4fe10ac4200850b73d5218127d926c033c26bd0d96108a0159db589739093cbae31ae4b208384fa2bc24d4ed512f3b6e5ac34 WHIRLPOOL 87102fab4301ff5b5ed432829a9486ca670c665653fbd33044def935d04dd406e886bf809f42b6faf976165023bc29fee7dd5afaa3bf6ba80b505c182a564a37
 MISC metadata.xml 314 SHA256 8c4f67c5ad4fce7c5eadc49ad4914bdf167df690c4475af52955c85557654883 SHA512 c20509634f287dcc7657b9cce28797e2fd5ca7a31f253eb9d7720bb90a51ac5f9fee94581edc4f0316730e9f4d7b8f32db792bcbd541248bc6c6d0db52093445 WHIRLPOOL 6d114fd80428a8e04002a513a09df4b8428c2fbd9cd0a1b83b9e05e813d964124e635a74fefdf844567860182107e7067a06a1549bee84eec219f4e205f4c3a7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPk3T0ACgkQVWmRsqeSphMq5QCdHmtljr0l0JK2DC4jytEE15EC
-V9AAn1lKt7DaoS2+UcSXE7VadvIV9eKE
-=L/ii
+iF4EAREIAAYFAlPpTGEACgkQC77qH+pIQ6TycgD/X/UvpEE5IUicONTTGRckfP4N
+JX6jW7oz79Wi0dfgQoEA/iwmG+LfFZvyxtiBNNpyD80/FIk/+i758KcJUgePjEnb
+=ITW7
 -----END PGP SIGNATURE-----
