@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/serf
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/serf/ChangeLog,v 1.140 2014/08/08 14:22:51 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/serf/ChangeLog,v 1.141 2014/08/11 23:06:08 floppym Exp $
+
+*serf-1.3.7 (11 Aug 2014)
+
+  11 Aug 2014; Mike Gilbert <floppym@gentoo.org> +serf-1.3.7.ebuild:
+  Version bump. Ebuild by Arfrever.
 
   08 Aug 2014; Jeroen Roovers <jer@gentoo.org> serf-1.3.6.ebuild:
   Stable for HPPA (bug #518616).
