@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/global
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/global/ChangeLog,v 1.128 2014/08/10 21:27:32 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/global/ChangeLog,v 1.129 2014/08/11 23:05:12 floppym Exp $
+
+*global-6.3.1 (11 Aug 2014)
+
+  11 Aug 2014; Mike Gilbert <floppym@gentoo.org> +global-6.3.1.ebuild:
+  Version bump. Ebuild by Arfrever.
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> global-6.2.10.ebuild,
   global-6.2.11.ebuild, global-6.2.12.ebuild, global-6.3.ebuild:
